Exception handling. Created ancestor class for jsf beans. Extend it in the other beans. Made some small changes in the internatialization .properties files. Added radio buttons on login page to select language. Added user preference to session attribute "lang".

--- a/jbugs-client/src/main/resources/jbugs/messages_en.properties
+++ b/jbugs-client/src/main/resources/jbugs/messages_en.properties
@@ -1,2 +1,5 @@
-login.username= username:
-login.password= password:
+login.username=username:
+login.password=password:
+login.wrong_password=Wrong password.
+login.nonexistent_user=No such username.
+login.success=We logged in, yey!
