--- a/jbugs-client/src/main/resources/jbugs/messages_en.properties
+++ b/jbugs-client/src/main/resources/jbugs/messages_en.properties
@@ -1,2 +1,8 @@
-login.username= username:
-login.password= password:
+languageDetails.locale= en
+login.languageButton= Change language
+login.required.username= Enter username
+login.required.password= Enter password
+login.username= Username:
+login.password= Password:
+login.buttonName= Login
+logout.buttonName= Logout
