added some messages and handleException in LoginBean

--- a/jbugs-client/src/main/resources/jbugs/messages_en.properties
+++ b/jbugs-client/src/main/resources/jbugs/messages_en.properties
@@ -6,6 +6,6 @@ login.username= Username:
 login.password= Password:
 login.buttonName= Login
 logout.buttonName= Logout
-login.wrong_password=Wrong password.
-login.nonexistent_user=No such username.
+login.wrong_username_password=Wrong username or password.
+login.account_deactivated= Your account is deactivated!
 login.success=We logged in, yey!
