--- a/jbugs-client/src/main/resources/jbugs/messages_ro.properties
+++ b/jbugs-client/src/main/resources/jbugs/messages_ro.properties
@@ -6,6 +6,6 @@ login.username= Utilizator:
 login.password= Parola:
 login.buttonName= Conectare
 logout.buttonName= Deconectare
-login.wrong_password=Parola gresita.
-login.nonexistent_user=Nu exista acest utilizator.
+login.wrong_password=Username sau Parola gresita.
+login.account_deactivated= Acest cont este dezactivat!
 login.success=Te-ai logat cu succes!
