Changes to NotificationService, NotificationDTO and Notification (entity).

--- a/jbugs-client/src/main/resources/jbugs/messages_en.properties
+++ b/jbugs-client/src/main/resources/jbugs/messages_en.properties
@@ -1,11 +1,13 @@
-languageDetails.locale= en
-login.languageButton= Change language
-login.required.username= Enter username
-login.required.password= Enter password
-login.username= Username:
-login.password= Password:
-login.buttonName= Login
-logout.buttonName= Logout
+languageDetails.locale=en
+login.languageButton=Change language
+login.required.username=Enter username
+login.required.password=Enter password
+login.username=Username:
+login.password=Password:
+login.buttonName=Login
+logout.buttonName=Logout
 login.wrong_username_password=Wrong username or password.
-login.account_deactivated= Your account is deactivated!
+login.account_deactivated=Your account is deactivated!
 login.success=We logged in, yey!
+notification.new_user.summary=Welcome {0}!
+notification.new_user.detail=Your details are: name: {0}, email: {1}, phone: {2}, username: {3}.
