--- a/jbugs-client/src/main/resources/jbugs/messages_ro.properties
+++ b/jbugs-client/src/main/resources/jbugs/messages_ro.properties
@@ -1,11 +1,13 @@
-languageDetails.locale= ro
-login.languageButton= Schimba limba
-login.required.username= Introduceti utilizatorul
-login.required.password= Introduceti parola
-login.username= Utilizator:
-login.password= Parola:
-login.buttonName= Conectare
-logout.buttonName= Deconectare
+languageDetails.locale=ro
+login.languageButton=Schimba limba
+login.required.username=Introduceti utilizatorul
+login.required.password=Introduceti parola
+login.username=Utilizator:
+login.password=Parola:
+login.buttonName=Conectare
+logout.buttonName=Deconectare
 login.wrong_password=Username sau Parola gresita.
-login.account_deactivated= Acest cont este dezactivat!
+login.account_deactivated=Acest cont este dezactivat!
 login.success=Te-ai logat cu succes!
+notification.new_user.summary=Bun venit {0}!
+notification.new_user.detail=Detaliile tale sunt: nume: {0}, email: {1}, telefon: {2}, nume de utilizator: {3}.
